objects/Automated_Report__c.object
<CustomObject>
    <description>Object used to automate scheduling</description>
    <fields>
        <fullName>Automatically_Created_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Created Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weekly_User_Report_Start_Time__c</fullName>
        <defaultValue>DATETIMEVALUE(TEXT(TODAY())&amp;&apos; 23:59:59&apos;)</defaultValue>
        <label>Weekly User Report Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Weekly_User_Report_Weekly_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weekly User Report Weekly Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Automated Report</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Automated Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Weekly_User_Report_Friday_after_5</fullName>
        <active>false</active>
        <description>Weekly User Report must be schedule for Friday after 4 PM</description>
        <errorConditionFormula>OR(
   AND(
       NOT(
           ISNULL(Weekly_User_Report_Start_Time__c)),
       WEEKDAY(DATEVALUE(Weekly_User_Report_Start_Time__c))&lt;&gt;6),
   AND(
       NOT(
           ISNULL(Weekly_User_Report_Start_Time__c)),
       AND(
           MID(TEXT(Weekly_User_Report_Start_Time__c-7/24), 12,2)&lt;&gt;&quot;16&quot;,
           MID(TEXT(Weekly_User_Report_Start_Time__c-7/24), 12,2)&lt;&gt;&quot;17&quot;,
           MID(TEXT(Weekly_User_Report_Start_Time__c-7/24), 12,2)&lt;&gt;&quot;18&quot;,
           MID(TEXT(Weekly_User_Report_Start_Time__c-7/24), 12,2)&lt;&gt;&quot;19&quot;,
           MID(TEXT(Weekly_User_Report_Start_Time__c-7/24), 12,2)&lt;&gt;&quot;20&quot;,
           MID(TEXT(Weekly_User_Report_Start_Time__c-7/24), 12,2)&lt;&gt;&quot;21&quot;,
           MID(TEXT(Weekly_User_Report_Start_Time__c-7/24), 12,2)&lt;&gt;&quot;22&quot;,
           MID(TEXT(Weekly_User_Report_Start_Time__c-7/24), 12,2)&lt;&gt;&quot;23&quot;))
)</errorConditionFormula>
        <errorMessage>Weekly User Report must be schedule for Friday after 4 PM</errorMessage>
    </validationRules>
</CustomObject>